--- a/build.gradle
+++ b/build.gradle
@@ -27,12 +27,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.projectlombok:lombok:1.18.28'
     testImplementation 'junit:junit:4.13.1'
-    compileOnly 'org.projectlombok:lombok'
+	testImplementation 'junit:junit:4.13.1'
+	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+	testImplementation 'com.github.sbrannen:spring-test-junit5:1.0.0'
 }
 
 tasks.named('test') {
