--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/first
+    url: jdbc:h2:tcp://localhost/~/test1
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -14,8 +14,8 @@ spring:
         format_sql: true
 
 logging.level:
-  org.hibernate.orm.jdbc.bind: trace
- #   org.org.hibernate.sql: debug
+#  org.hibernate.orm.jdbc.bind: trace
+  org.org.hibernate.sql: debug
 
 
 
